# tomcrypt

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
cpp/: CMakeLists.txt  test.cpp  utils.cpp
cpp/include/: utils.hpp
